--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -2,24 +2,38 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">UseGolang.com</a>
+      <a class="navbar-brand" href="/">LensLocked.com</a>
     </div>
-    <div id="navbar" class="navbar-collapse collapse">
+    <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li><a href="/contact">Contact</a></li>
+        {{if .User}}
+          <li><a href="/galleries">Galleries</a></li>
+        {{end}}
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/login">Log In</a></li>
-        <li><a href="/signup">Sign Up</a></li>
+        {{if .User}}
+          <li>{{template "logoutForm"}}</li>
+        {{else}}
+          <li><a href="/login">Log In</a></li>
+          <li><a href="/signup">Sign Up</a></li>
+        {{end}}
       </ul>
     </div>
   </div>
 </nav>
+{{end}}
+
+{{define "logoutForm"}}
+<form class="navbar-form navbar-left" action="/logout" method="POST">
+  {{csrfField}}
+  <button type="submit" class="btn btn-default">Log out</button>
+</form>
 {{end}}
